Fix Arrow sizing in NavMenu - btn__text-arrow.scss: Arrow wrap now allows overflow on Y axis. - nav-menu.scss:   + Reduce font size of option class.   + Svg translates to -15% instead of 0%.   + Probably extranneous overflow: visibles; will delete in next commit. - Arrow.jsx: Change viewbox 3rd coordinate from 101 to 151

--- a/src/components/buttons/btns.scss
+++ b/src/components/buttons/btns.scss
@@ -12,7 +12,8 @@
       margin-left: var(--space-md);
       height: 35px;
       width: 35px;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: visible;
     }
     svg {
       position: absolute;
